--- a/k_nearest.ipynb
+++ b/k_nearest.ipynb
@@ -6,6 +6,7 @@
       "name": "k-nearest.ipynb",
       "version": "0.3.2",
       "provenance": [],
+      "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -175,6 +176,64 @@
             "tags": []
           },
           "execution_count": 11
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "rpkKhIEwP2vg",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "recommend(username, users)\n",
+        "recommend(\"hailey\", users)\n",
+        "1. Find the closest neighbour\n",
+        "2. Find all the bands that \"hailey\" has rated but closest neighbour has not\n",
+        "3. Recommend bands that hailey has rated higher and neighbour has not yet heard"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "hf4HsKZ3QfgE",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 119
+        },
+        "outputId": "f2e8290e-28f5-4dd8-b8a9-66bdbbf2ef61"
+      },
+      "cell_type": "code",
+      "source": [
+        "def recommend(username, users):\n",
+        "  #find the closest neighbour\n",
+        "  nearest_user = computeNearestNeighbour(username, users)[0][1]\n",
+        "  recommendations = []\n",
+        "  # find bands that are not rated by each other\n",
+        "  neighbourRatings = users[nearest_user]\n",
+        "  userRatings = users[username]\n",
+        "  print(neighbourRatings)\n",
+        "  for artist in neighbourRatings:\n",
+        "    print(artist, userRatings[artist])\n",
+        "    if not artist in neighbourRatings:\n",
+        "      recommendations.append(())\n",
+        "\n",
+        "recommend(\"Hailey\", users)\n",
+        "  "
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "{'Blues Traveler': 3.0, 'Norah Jones': 5.0, 'Phoenix': 4.0, 'Slightly Stoopid': 2.5, 'The Strokes': 3.0}\n",
+            "Broken Bells 4.0\n",
+            "Deadmau5 1.0\n",
+            "Norah Jones 4.0\n",
+            "The Strokes 4.0\n",
+            "Vampire Weekend 1.0\n"
+          ],
+          "name": "stdout"
         }
       ]
     }
