--- a/k_nearest.ipynb
+++ b/k_nearest.ipynb
@@ -6,8 +6,7 @@
       "name": "k-nearest.ipynb",
       "version": "0.3.2",
       "provenance": [],
-      "collapsed_sections": [],
-      "include_colab_link": true
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -15,16 +14,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/sunkay/MLalgos/blob/master/k_nearest.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "metadata": {
         "id": "7NuAygsIQ1s6",
@@ -199,9 +188,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 119
+          "height": 68
         },
-        "outputId": "f2e8290e-28f5-4dd8-b8a9-66bdbbf2ef61"
+        "outputId": "9b2ea7af-7fb7-4ff9-8a5a-cad474fea26c"
       },
       "cell_type": "code",
       "source": [
@@ -212,26 +201,30 @@
         "  # find bands that are not rated by each other\n",
         "  neighbourRatings = users[nearest_user]\n",
         "  userRatings = users[username]\n",
-        "  print(neighbourRatings)\n",
+        "  print(\"neighRatings\", neighbourRatings)\n",
+        "  print(\"UserRatings\", userRatings)\n",
         "  for artist in neighbourRatings:\n",
-        "    print(artist, userRatings[artist])\n",
-        "    if not artist in neighbourRatings:\n",
-        "      recommendations.append(())\n",
+        "    if not artist in userRatings:\n",
+        "      recommendations.append((artist, neighbourRatings[artist]))\n",
+        "  \n",
+        "  # sort the recommendations by rating\n",
+        "  recommendations = sorted(recommendations, \n",
+        "                           key=lambda x: x[1], \n",
+        "                           reverse=True)\n",
+        "  \n",
+        "  return recommendations\n",
         "\n",
-        "recommend(\"Hailey\", users)\n",
+        "print(recommend(\"Hailey\", users))\n",
         "  "
       ],
-      "execution_count": 16,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "{'Blues Traveler': 3.0, 'Norah Jones': 5.0, 'Phoenix': 4.0, 'Slightly Stoopid': 2.5, 'The Strokes': 3.0}\n",
-            "Broken Bells 4.0\n",
-            "Deadmau5 1.0\n",
-            "Norah Jones 4.0\n",
-            "The Strokes 4.0\n",
-            "Vampire Weekend 1.0\n"
+            "neighRatings {'Blues Traveler': 3.0, 'Norah Jones': 5.0, 'Phoenix': 4.0, 'Slightly Stoopid': 2.5, 'The Strokes': 3.0}\n",
+            "UserRatings {'Broken Bells': 4.0, 'Deadmau5': 1.0, 'Norah Jones': 4.0, 'The Strokes': 4.0, 'Vampire Weekend': 1.0}\n",
+            "[('Phoenix', 4.0), ('Blues Traveler', 3.0), ('Slightly Stoopid', 2.5)]\n"
           ],
           "name": "stdout"
         }
